--- a/src/components/inventario/inventario.scss
+++ b/src/components/inventario/inventario.scss
@@ -1,13 +1,9 @@
 inventario {
-    ion-grid {
-        padding-left: 20px !important;
-        margin: 2px !important;
-    }
 
       .btn-list {
         height: 2.5rem;
         margin: 0.2rem 0.2rem;
-        width: 110px;
+        min-width: 120px;
         font-size: 1.1rem;
       }
 }
