pruebas y diseno a realizar

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -213,41 +213,9 @@ $colors: (
 .md{
   font-size: 1.1rem !important;
 }
-@media (min-width: 400px) {
-  .label-md[stacked]{
-    font-size: 1.23rem !important;//todo: tamanio de fuente
-  }
-  .item-md{
-    font-size: 1.23rem !important;//todo: tamanio de fuente
-  }
-  .grid .item-md{
-    font-size: 1.23rem !important;//todo: tamanio de fuente
-  }
-  .md{
-    font-size: 1.23rem !important;
-  }
 
-    // PARA TABLAS PRIMENG 
-    .ui-table { 
-      font-size: 12px !important;
-      color: black;
-      font-family: "Roboto", "Helvetica Neue", sans-serif
-    }
-  
-    .ui-table .ui-table-tbody > tr {
-      background: #fffedf;
-    }
-  
-    .captionGlobal {
-      text-align: right;
-      margin: 0px;
-    }
-    .questGlobal {
-      width:auto;
-      height:20px;
-      padding:5px 1px 1px 5px;
-    }
-  
+@media (min-width: 400px) {
+  @import "400.scss";
 }
 @media (min-width: 800px) {
   
