Cambio de estilo color sucursal, y correccion de detalle DIFERENCIA

--- a/src/components/inventario/inventario.html
+++ b/src/components/inventario/inventario.html
@@ -1,8 +1,16 @@
-      <button *ngFor="let item of list" class="btn-list" ion-button color="style-sucursales-{{item.propio}}">
+      <button *ngFor="let item of list" 
+              class="btn-list" 
+              ion-button 
+              [color]="item.propio==0?'style-sucursales-0':(storageService.getAccesoResponse().tipo=='SUCURSAL'?'primary':'cafe-claro')">
+
         <p *ngIf="item.propio==1; else a1">
           {{item.nombreAmbiente}}: <b>{{item.cantidad}}</b>
         </p>
         <ng-template #a1>
           <p *ngIf="item.propio==0" >{{item.nombreAmbiente}}: <b>{{item.cantidad}}</b></p>
         </ng-template>
+
       </button>
+      
+      
+      
