--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0B4C5F,//#488aff,
+  primary:    #4FB25D,//#488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
+  azulado:    #1D6069,
   cafe-claro:  (
     base:#CC5F39,
     contrast:#ffffff
