--- a/src/theme/400.scss
+++ b/src/theme/400.scss
@@ -1,5 +1,11 @@
 .label-md[stacked]{
-    font-size: 1.23rem !important;//todo: tamanio de fuente
+    font-size: 1.3rem !important;//todo: tamanio de fuente
+  }
+  .label-md {
+    //color: #1D6069 !important;
+    //font-family: 'Courier New', Courier, monospace;
+    font-family: "Roboto", "Helvetica Neue", sans-serif;
+    font-weight: bold !important; 
   }
   .item-md{
     font-size: 1.23rem !important;//todo: tamanio de fuente
