--- a/src/components/usuario/usuario.html
+++ b/src/components/usuario/usuario.html
@@ -16,16 +16,16 @@
                 <ion-row>
                     <ion-col>
                         <ion-item>
-                            <ion-label stacked>{{ 'Codigo ' }}</ion-label>
+                            <ion-label stacked>{{ 'Codigo ' }} {{ storageService.getDtoTransaccion().tipoE | titlecase }}</ion-label>
                             <ion-input #codigo type="text"
                                         [(ngModel)]="usuarioRequest.codigo"
                                         (ngModelChange)="usuarioRequest.codigo = $event.toLocaleUpperCase()"
-                                        (keyup.enter)="onVerificaCodigo(ººnombre)"
+                                        (keyup.enter)="onVerificaCodigo(nombre)"
                                         tabindex="1"></ion-input>
                         </ion-item>
                     </ion-col>
                     <ion-col>
-                            <ion-label stacked style="color: brown; font-size: 10px !important;">{{ 'Mensaje de advertencia ' }}</ion-label>
+                            <ion-label stacked style="color: brown; font-size: 12px !important;">{{ msg }}</ion-label>
                     </ion-col>
                 </ion-row>
                 <ion-row>
