--- a/src/components/detalle/detalle.html
+++ b/src/components/detalle/detalle.html
@@ -1,4 +1,4 @@
-<p-table [columns]="cols" [value]="lista" 
+<p-table [columns]="cols" [value]="lista"
          [scrollable]="true" scrollHeight="150px">
                 <ng-template pTemplate="colgroup" let-columns>
                     <colgroup>
@@ -6,7 +6,7 @@
                     </colgroup>
                 </ng-template>
                 <ng-template pTemplate="header" let-columns>
-                    <tr>
+                    <tr style="text-align: center;">
                         <th *ngFor="let col of columns">
                             {{col.header}}
                         </th>
@@ -40,4 +40,4 @@
                             <td></td>
                         </tr>
                 </ng-template>
-    </p-table>    
+    </p-table>
